--- a/info/info.html
+++ b/info/info.html
@@ -27,14 +27,14 @@
                 <h1 class="main_title">Villa General Belgrano, un lugar ideal</h1>
                 <div class="infoContainer">
                     <h3 class="sub_header">Ubicación</h3>
-                    <button onclick="toggleUbication()" id="ubicationButton">+</button>
+                    <button onclick="toggleUbication()" class="infoButtons" id="ubicationButton">+</button>
                 </div>
                 <p id="ubication">En una región de altas montañas, de ríos caudalosos y de grandes lagos, en la región geográfica del Valle de Calamuchita,
                     se encuentra la Villa General Belgrano.
                 </p>
                 <div class="infoContainer">
                     <h3 class="sub_header">Clima</h3>
-                    <button onclick="toggleClima()" id="climaButton">+</button>
+                    <button onclick="toggleClima()" class="infoButtons" id="climaButton">+</button>
                 </div>
                 <p id="clima">La localidad tiene un agradable clima templado, con una temperatura promedio anual de entre 15 y 17°C, aunque varia mucho la
                 temperatura según la estación del año. Si te gusta el frío, Villa General Belgrano es una excelente lugar para visitar en invierno, ya que
@@ -42,14 +42,14 @@
                 </p>
                 <div class="infoContainer">
                     <h3 class="sub_header">Fiesta Nacional de la Masa Vienesa</h3>
-                    <button onclick="toggleFiesta1()" id="fiesta1Button">+</button>
+                    <button onclick="toggleFiesta1()" class="infoButtons" id="fiesta1Button">+</button>
                 </div>
                 <p id="fiesta1">La Fiesta Nacional de la Masa Vienesa es un clásico de Semana Santa. La buena gastronomía, chocolates y masas, variados espectáculos para toda la familia y un agradable clima otoñal, 
                 son las claves para una propuesta distinta que ya lleva más de 40 años de tradición.
                 </p>
                 <div class="infoContainer">
                     <h3 class="sub_header">Fiesta Nacional de la Cerveza</h3>
-                    <button onclick="toggleFiesta2()" id="fiesta2Button">+</button>
+                    <button onclick="toggleFiesta2()" class="infoButtons" id="fiesta2Button">+</button>
                 </div>
                 <p id="fiesta2"> En Villa General Belgrano, desde el primer sábado de octubre hasta el segundo fin de semana de ese mismo mes, cada año se celebra la Fiesta Nacional de la Cerveza, que es la versión argentina de la Oktoberfest de Múnich, Alemania. 
                 Cada día de celebración comienza con el "Espiche", ceremonia que consiste en introducir en el barril de cerveza previamente agitado una canilla de madera, con la cual sale fuertemente la cerveza con espuma abundante que luego se reparte entre el público presente.
